--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -1,25 +1,27 @@
 {
-	"ui": {
-		"stockpile": {
-			"filters": {
-				"goods": "Goods",
-				"gear": "Equipment",
-				"plants": "Plants",
-				"animal_parts": "Animal Parts",
-				"tooltip_fibers": "fibers",
-				"tooltip_herbs": "herbs",
-				"tooltip_saplings": "saplings",
-				"tooltip_meat_and_egg": "meat & eggs",
-				"tooltip_cooking_ingredients": "cooking ingredients",
-				"tooltip_grains": "grains",
-				"tooltip_animal_feed": "animal feed",
-				"tooltip_fur_pelts": "fur pelts",
-				"tooltip_skins": "skins",
-				"tooltip_feathers": "feathers",
-				"tooltip_leather": "leather",
-				"tooltip_tools": "tools",
-				"tooltip_wool": "wool"
-			}
-		}
+	"filters": {
+		"goods": "Goods",
+		"gear": "Equipment",
+		"plants": "Plants",
+		"animal_parts": "Animal Parts",
+		"cooking_ingredients": "Ingredients",
+		"tooltip_fiber": "fibers",
+		"tooltip_herb": "herbs",
+		"tooltip_sapling": "saplings",
+		"tooltip_pelt": "fur pelts",
+		"tooltip_skin": "skins",
+		"tooltip_feather": "feathers",
+		"tooltip_wool": "wool",
+		"tooltip_thread": "thread",
+		"tooltip_cloth": "cloth",
+		"tooltip_leather": "leather",
+		"tooltip_tool": "tools",
+		"tooltip_food_container": "fruits & vegetables",
+		"tooltip_meat": "meat",
+		"tooltip_egg": "eggs",
+		"tooltip_wheat": "wheat",
+		"tooltip_flour": "flour",
+		"tooltip_corn_meal": "corn meal",
+		"tooltip_animal_feed": "animal feed"
 	}
 }
