--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -5,23 +5,27 @@
 		"plants": "Plants",
 		"animal_parts": "Animal Parts",
 		"cooking_ingredients": "Ingredients",
-		"tooltip_fiber": "fibers",
-		"tooltip_herb": "herbs",
-		"tooltip_sapling": "saplings",
-		"tooltip_pelt": "fur pelts",
-		"tooltip_skin": "skins",
-		"tooltip_feather": "feathers",
-		"tooltip_wool": "wool",
-		"tooltip_thread": "thread",
-		"tooltip_cloth": "cloth",
-		"tooltip_leather": "leather",
-		"tooltip_tool": "tools",
-		"tooltip_food_container": "fruits & vegetables",
-		"tooltip_meat": "meat",
-		"tooltip_egg": "eggs",
-		"tooltip_wheat": "wheat",
-		"tooltip_flour": "flour",
-		"tooltip_corn_meal": "corn meal",
-		"tooltip_animal_feed": "animal feed"
+		"tooltip_fiber": "Fibers",
+		"tooltip_herb": "Herbs",
+		"tooltip_sapling": "Saplings",
+		"tooltip_pelt": "Pelts",
+		"tooltip_skin": "Skins",
+		"tooltip_feather": "Feathers",
+		"tooltip_wool": "Wool",
+		"tooltip_bone": "Bones",
+		"tooltip_thread": "Thread",
+		"tooltip_cloth": "Cloth",
+		"tooltip_leather": "Leather",
+		"tooltip_tool": "Tools",
+		"tooltip_melee_weapon": "Melee Weapons",
+		"tooltip_ranged_weapon": "Ranged Weapons",
+		"tooltip_light_armor": "Light Armor",
+		"tooltip_heavy_armor": "Heavy Armor",
+		"tooltip_meat": "Meat",
+		"tooltip_egg": "Eggs",
+		"tooltip_wheat": "Wheat",
+		"tooltip_flour": "Flour",
+		"tooltip_corn_meal": "Corn Meal",
+		"tooltip_animal_feed": "Animal Feed"
 	}
 }
