--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -16,6 +16,7 @@
 		"tooltip_thread": "Thread",
 		"tooltip_cloth": "Cloth",
 		"tooltip_leather": "Leather",
+		"tooltip_gear": "Gears",
 		"tooltip_tool": "Tools",
 		"tooltip_melee_weapon": "Melee Weapons",
 		"tooltip_ranged_weapon": "Ranged Weapons",
