--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -1,13 +1,23 @@
 {
 	"filters": {
-		"goods": "Goods",
-		"gear": "Equipment",
+		"ore": "Ore",
 		"plants": "Plants",
 		"animal_parts": "Animal Parts",
+		"goods": "Refined Goods",
+		"ingots": "Metal Bars",
+		"equipment": "Equipment",
+		"consumables": "Consumables",
 		"cooking_ingredients": "Ingredients",
+		"animal_feed": "Animal Feed",
+		"tooltip_coal_ore": "Coal",
+		"tooltip_copper_ore": "Copper",
+		"tooltip_tin_ore": "Tin",
+		"tooltip_iron_ore": "Iron",
+		"tooltip_silver_ore": "Silver",
+		"tooltip_gold_ore": "Gold",
 		"tooltip_fiber": "Fibers",
 		"tooltip_herb": "Herbs",
-		"tooltip_sapling": "Saplings",
+		"tooltip_tree": "Saplings",
 		"tooltip_pelt": "Pelts",
 		"tooltip_skin": "Skins",
 		"tooltip_feather": "Feathers",
@@ -17,16 +27,27 @@
 		"tooltip_cloth": "Cloth",
 		"tooltip_leather": "Leather",
 		"tooltip_gear": "Gears",
+		"tooltip_copper_ingot": "Copper Ingots",
+		"tooltip_tin_ingot": "Tin Ingots",
+		"tooltip_bronze_ingot": "Bronze Ingots",
+		"tooltip_iron_ingot": "Iron Ingots",
+		"tooltip_steel_ingot": "Steel Ingots",
+		"tooltip_silver_ingot": "Silver Ingots",
+		"tooltip_gold_ingot": "Gold Ingots",
 		"tooltip_tool": "Tools",
 		"tooltip_melee_weapon": "Melee Weapons",
 		"tooltip_ranged_weapon": "Ranged Weapons",
 		"tooltip_light_armor": "Light Armor",
 		"tooltip_heavy_armor": "Heavy Armor",
+		"tooltip_healing_item": "Healing Items",
+		"tooltip_tonic": "Tonics",
 		"tooltip_meat": "Meat",
 		"tooltip_egg": "Eggs",
 		"tooltip_wheat": "Wheat",
 		"tooltip_flour": "Flour",
 		"tooltip_corn_meal": "Corn Meal",
-		"tooltip_animal_feed": "Animal Feed"
+		"tooltip_poyo_feed": "Poyo Feed",
+		"tooltip_rabbit_feed": "Rabbit Feed",
+		"tooltip_sheep_feed": "Sheep Feed"
 	}
 }
