--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -7,7 +7,7 @@
 		"ingots": "Metal Bars",
 		"equipment": "Equipment",
 		"consumables": "Consumables",
-		"cooking_ingredients": "Ingredients",
+		"ingredients": "Ingredients",
 		"animal_feed": "Animal Feed",
 		"tooltip_coal_ore": "Coal",
 		"tooltip_copper_ore": "Copper",
@@ -41,13 +41,14 @@
 		"tooltip_heavy_armor": "Heavy Armor",
 		"tooltip_healing_item": "Healing Items",
 		"tooltip_tonic": "Tonics",
+		"tooltip_fruit_vegetable": "Fruits & Vegetables",
 		"tooltip_meat": "Meat",
+		"tooltip_rotten_food": "Rotten Foods",
+		"tooltip_cooking_ingredient": "Cooking Ingredients",
 		"tooltip_egg": "Eggs",
 		"tooltip_wheat": "Wheat",
-		"tooltip_grain_flour": "Grain Flour",
 		"tooltip_poyo_feed": "Poyo Feed",
 		"tooltip_rabbit_feed": "Rabbit Feed",
-		"tooltip_sheep_feed": "Sheep Feed",
-		"tooltip_rotten_food": "Rotten Foods"
+		"tooltip_sheep_feed": "Sheep Feed"
 	}
 }
