--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -39,6 +39,7 @@
 		"tooltip_ranged_weapon": "Ranged Weapons",
 		"tooltip_light_armor": "Light Armor",
 		"tooltip_heavy_armor": "Heavy Armor",
+		"tooltip_worker_outfit": "Worker Outfits",
 		"tooltip_healing_item": "Healing Items",
 		"tooltip_tonic": "Tonics",
 		"tooltip_fruit_vegetable": "Fruits & Vegetables",
