--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -3,7 +3,7 @@
 		"ore": "Ore",
 		"plants": "Plants",
 		"animal_parts": "Animal Parts",
-		"goods": "Refined Goods",
+		"goods": "Refined Craftables",
 		"ingots": "Metal Bars",
 		"equipment": "Equipment",
 		"consumables": "Consumables",
@@ -23,6 +23,9 @@
 		"tooltip_feather": "Feathers",
 		"tooltip_wool": "Wool",
 		"tooltip_bone": "Bones",
+		"tooltip_defense": "Fences & Gates",
+		"tooltip_light_source": "Light Sources",
+		"tooltip_trap": "Traps & Turrets",
 		"tooltip_thread": "Thread",
 		"tooltip_cloth": "Cloth",
 		"tooltip_leather": "Leather",
@@ -42,12 +45,15 @@
 		"tooltip_outfit": "Outfits",
 		"tooltip_healing_item": "Healing Items",
 		"tooltip_tonic": "Tonics",
-		"tooltip_fruit_vegetable": "Fruits & Vegetables",
-		"tooltip_meat": "Meat",
+		"tooltip_raw_vege": "Raw Foods (Vege)",
+		"tooltip_raw_meat": "Raw Foods (Meat)",
+		"tooltip_prepared_vege": "Cooked Foods (Vege)",
+		"tooltip_prepared_meat": "Cooked Foods (Meat)",
 		"tooltip_rotten_food": "Rotten Foods",
-		"tooltip_cooking_ingredient": "Cooking Ingredients",
+		"tooltip_refined_ingredient": "Refined Ingredients",
 		"tooltip_egg": "Eggs",
 		"tooltip_wheat": "Wheat",
+		"tooltip_kibble": "Kibble",
 		"tooltip_poyo_feed": "Poyo Feed",
 		"tooltip_rabbit_feed": "Rabbit Feed",
 		"tooltip_sheep_feed": "Sheep Feed"
