--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -37,7 +37,7 @@
 		"tooltip_steel_ingot": "Steel Ingots",
 		"tooltip_silver_ingot": "Silver Ingots",
 		"tooltip_gold_ingot": "Gold Ingots",
-		"tooltip_tool": "Tools",
+		"tooltip_tool": "Talismans & Workbenches",
 		"tooltip_melee_weapon": "Melee Weapons",
 		"tooltip_ranged_weapon": "Ranged Weapons",
 		"tooltip_light_armor": "Light Armor",
