--- a/better_stockpiles/locales/en.json
+++ b/better_stockpiles/locales/en.json
@@ -18,6 +18,7 @@
 		"tooltip_fiber": "Fibers",
 		"tooltip_herb": "Herbs",
 		"tooltip_tree": "Saplings",
+		"tooltip_sprout": "Sprouts",
 		"tooltip_pelt": "Pelts",
 		"tooltip_skin": "Skins",
 		"tooltip_feather": "Feathers",
