Small localisation fix

--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -31,10 +31,12 @@
 		"tooltip_outfit": "Tenues",
 		"tooltip_healing_item": "Articles de soin",
 		"tooltip_tonic": "Potions",
-		"tooltip_raw_vege": "Légumes et fruits crus",
+		"tooltip_food_source": "Sources de nourriture et de boissons",
+		"tooltip_raw_food": "Légumes et fruits crus",
 		"tooltip_raw_meat": "Viande crue",
 		"tooltip_prepared_vege": "Plats cuisinés végétariens",
 		"tooltip_prepared_meat": "Plats cuisinés à la viande",
+		"tooltip_drink": "Boissons",
 		"tooltip_rotten_food": "Nourriture pourrie",
 		"tooltip_raw_ingredient": "Ingrédients crus",
 		"tooltip_refined_ingredient": "Ingrédients raffinés",
@@ -43,8 +45,6 @@
 		"tooltip_poyo_feed": "Nourriture pour Poyos",
 		"tooltip_rabbit_feed": "Nourriture pour lapins",
 		"tooltip_sheep_feed": "Nourriture pour moutons",
-		"tooltip_food_source": "Sources de nourriture et de boissons",
-		"tooltip_drink": "Boissons",
 		"tooltip_pig_feed": "Nourriture pour cochons",
 		"tooltip_yak_feed": "Nourriture pour yaks",
 		"tooltip_medicine": "Médicaments",
