Fix for Gold Flakes
Add Gold Flakes filter, and use non-resized icons

--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -22,6 +22,7 @@
 		"tooltip_thread": "Fil",
 		"tooltip_cloth": "Tissu",
 		"tooltip_leather": "Cuir",
+		"tooltip_gold_flakes": "Paillettes d'or",
 		"tooltip_component": "Composants",
 		"tooltip_tool": "Talismans et ateliers",
 		"tooltip_melee_weapon": "Armes de mêlée",
