--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -22,6 +22,7 @@
 		"tooltip_thread": "Thread",
 		"tooltip_cloth": "Cloth",
 		"tooltip_leather": "Leather",
+		"tooltip_gold_flakes": "Gold Flakes",
 		"tooltip_component": "Components",
 		"tooltip_tool": "Talismans & Workbenches",
 		"tooltip_melee_weapon": "Melee Weapons",
