Better Storage 1.1 for A23

--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -1,54 +1,41 @@
 {
-	"filters": {
-		"plants": "Plants",
-		"animal_parts": "Animal Parts",
-		"goods": "Refined Craftables",
-		"equipment": "Equipment",
-		"consumables": "Consumables",
-		"ingredients": "Ingredients",
-		"animal_feed": "Animal Feed",
-		"tooltip_fiber": "Fibers",
-		"tooltip_herb": "Herbs",
-		"tooltip_tree": "Saplings",
-		"tooltip_sprout": "Sprouts & Seeds",
-		"tooltip_pelt": "Pelts",
-		"tooltip_skin": "Skins",
-		"tooltip_feather": "Feathers",
-		"tooltip_wool": "Wool",
-		"tooltip_bone": "Bones",
-		"tooltip_defense": "Fences & Gates",
-		"tooltip_light_source": "Light Sources",
-		"tooltip_trap": "Traps & Turrets",
-		"tooltip_thread": "Thread",
-		"tooltip_cloth": "Cloth",
-		"tooltip_leather": "Leather",
-		"tooltip_gold_flakes": "Gold Flakes",
-		"tooltip_component": "Components",
-		"tooltip_tool": "Talismans & Workbenches",
-		"tooltip_melee_weapon": "Melee Weapons",
-		"tooltip_ranged_weapon": "Ranged Weapons",
-		"tooltip_light_armor": "Light Armor",
-		"tooltip_heavy_armor": "Heavy Armor",
-		"tooltip_outfit": "Outfits",
-		"tooltip_healing_item": "Healing Items",
-		"tooltip_tonic": "Tonics",
-		"tooltip_food_source": "Food & Drink Sources",
-		"tooltip_raw_food": "Raw Fruits & Vegetables",
-		"tooltip_raw_meat": "Raw Meat",
-		"tooltip_prepared_vege": "Cooked Veggie Foods",
-		"tooltip_prepared_meat": "Cooked Meat Foods",
-		"tooltip_drink": "Drinks",
-		"tooltip_rotten_food": "Rotten Foods",
-		"tooltip_raw_ingredient": "Raw Ingredients",
-		"tooltip_refined_ingredient": "Refined Ingredients",
-		"tooltip_wheat": "Wheat",
-		"tooltip_kibble": "Kibble",
-		"tooltip_poyo_feed": "Poyo Feed",
-		"tooltip_rabbit_feed": "Rabbit Feed",
-		"tooltip_sheep_feed": "Sheep Feed",
-		"tooltip_pig_feed": "Pig Feed",
-		"tooltip_yak_feed": "Yak Feed",
-		"tooltip_medicine": "Medicine",
-		"tooltip_quest_items": "Quest Items"
-	}
+    "filters": {
+        "animal_feed": "Animal Feed",
+        "consumables": "Consumables",
+        "cooking_ingredients": "Ingredients",
+        "equipment": "Equipment",
+        "garbage": "Garbage",
+        "pile": "Items Piles",
+        "prepared_meat": "Cooked Meat",
+        "prepared_veggie": "Cooked Veggie",
+        "raw_meat": "Raw Meat",
+        "raw_veggie": "Raw Veggie",
+        "tooltip_bed": "Beds",
+        "tooltip_bread": "Bread",
+        "tooltip_chair": "Chairs",
+        "tooltip_containers": "Supply & Finished Work Containers",
+        "tooltip_crate": "Storage Containers",
+        "tooltip_decorative": "Decorative Furniture",
+        "tooltip_door": "Doors",
+        "tooltip_fence": "Fences",
+        "tooltip_gate": "Gates",
+        "tooltip_gizmo": "Traps & Turrets",
+        "tooltip_healing_item": "Bandages & Healing Tonic",
+        "tooltip_heavy_armor": "Heavy Armor",
+        "tooltip_light_armor": "Light Armor",
+        "tooltip_light_source": "Light Sources",
+        "tooltip_log": "Wood Log",
+        "tooltip_meat_stew": "Meat Stew & Tagine",
+        "tooltip_melee_weapon": "Melee Weapons",
+        "tooltip_pelt": "Fur Pelt",
+        "tooltip_quest_items": "Quest Items",
+        "tooltip_ranged_weapon": "Ranged Weapons",
+        "tooltip_rotten_food": "Rotten Food",
+        "tooltip_seeds": "Seeds",
+        "tooltip_table": "Tables",
+        "tooltip_tree": "Tree Sapling",
+        "tooltip_veggie_stew": "Veggie Stew & Tagine",
+        "tooltip_window": "Windows",
+        "tooltip_worker_outfit": "Worker Outfits"
+    }
 }
