--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -1,54 +1,41 @@
 {
-	"filters": {
-		"plants": "Plantes",
-		"animal_parts": "Animaux",
-		"goods": "Matériaux raffinés",
-		"equipment": "Equipement",
-		"consumables": "Consommables",
-		"ingredients": "Ingrédients",
-		"animal_feed": "Pâtures",
-		"tooltip_fiber": "Fibres",
-		"tooltip_herb": "Herbes",
-		"tooltip_tree": "Jeunes arbres",
-		"tooltip_sprout": "Pousses et Graines",
-		"tooltip_pelt": "Fourrures",
-		"tooltip_skin": "Peaux",
-		"tooltip_feather": "Plumes",
-		"tooltip_wool": "Laine",
-		"tooltip_bone": "Ossements",
-		"tooltip_defense": "Clôtures et portails",
-		"tooltip_light_source": "Sources de lumière",
-		"tooltip_trap": "Pièges et tourelles",
-		"tooltip_thread": "Fil",
-		"tooltip_cloth": "Tissu",
-		"tooltip_leather": "Cuir",
-		"tooltip_gold_flakes": "Paillettes d'or",
-		"tooltip_component": "Composants",
-		"tooltip_tool": "Talismans et ateliers",
-		"tooltip_melee_weapon": "Armes de mêlée",
-		"tooltip_ranged_weapon": "Armes à distance",
-		"tooltip_light_armor": "Armures légères",
-		"tooltip_heavy_armor": "Armures lourdes",
-		"tooltip_outfit": "Tenues",
-		"tooltip_healing_item": "Articles de soin",
-		"tooltip_tonic": "Potions",
-		"tooltip_food_source": "Sources de nourriture et de boissons",
-		"tooltip_raw_food": "Légumes et fruits crus",
-		"tooltip_raw_meat": "Viande crue",
-		"tooltip_prepared_vege": "Plats cuisinés végétariens",
-		"tooltip_prepared_meat": "Plats cuisinés à la viande",
-		"tooltip_drink": "Boissons",
-		"tooltip_rotten_food": "Nourriture pourrie",
-		"tooltip_raw_ingredient": "Ingrédients crus",
-		"tooltip_refined_ingredient": "Ingrédients raffinés",
-		"tooltip_wheat": "Blé",
-		"tooltip_kibble": "Croquettes",
-		"tooltip_poyo_feed": "Nourriture pour Poyos",
-		"tooltip_rabbit_feed": "Nourriture pour lapins",
-		"tooltip_sheep_feed": "Nourriture pour moutons",
-		"tooltip_pig_feed": "Nourriture pour cochons",
-		"tooltip_yak_feed": "Nourriture pour yaks",
-		"tooltip_medicine": "Médicaments",
-		"tooltip_quest_items": "Objets de quête"
-	}
+    "filters": {
+        "animal_feed": "Pâtures",
+        "consumables": "Consommables",
+        "cooking_ingredients": "Ingrédients",
+        "equipment": "Équipement",
+        "garbage": "Déchets",
+        "pile": "Piles d'objets",
+        "prepared_meat": "Plats Viande",
+        "prepared_veggie": "Plats Végé.",
+        "raw_meat": "Viande crue",
+        "raw_veggie": "Végé. crus",
+        "tooltip_bed": "Lits",
+        "tooltip_bread": "Pain",
+        "tooltip_chair": "Chaises",
+        "tooltip_containers": "Containers d'approvisionnement",
+        "tooltip_crate": "Containers de stockage",
+        "tooltip_decorative": "Meubles décoratifs",
+        "tooltip_door": "Portes",
+        "tooltip_fence": "Barrières",
+        "tooltip_gate": "Portails",
+        "tooltip_gizmo": "Pièges & Tourelles",
+        "tooltip_healing_item": "Bandages & Potions de soin",
+        "tooltip_heavy_armor": "Armures lourdes",
+        "tooltip_light_armor": "Armures légères",
+        "tooltip_light_source": "Sources de lumière",
+        "tooltip_log": "Rondins de bois",
+        "tooltip_meat_stew": "Ragoût et Tajine de viande",
+        "tooltip_melee_weapon": "Armes de mêlée",
+        "tooltip_pelt": "Fourrures",
+        "tooltip_quest_items": "Objets de quête",
+        "tooltip_ranged_weapon": "Armes à distance",
+        "tooltip_rotten_food": "Nourriture pourrie",
+        "tooltip_seeds": "Graines",
+        "tooltip_table": "Tables",
+        "tooltip_tree": "Pousses d'arbres",
+        "tooltip_veggie_stew": "Soupe & Tajine de légumes",
+        "tooltip_window": "Fenêtres",
+        "tooltip_worker_outfit": "Tenues de travail"
+    }
 }
