--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -21,19 +21,20 @@
         "tooltip_gate": "Gates",
         "tooltip_gizmo": "Traps & Turrets",
         "tooltip_healing_item": "Bandages & Healing Tonic",
+        "tooltip_farm_seed": "Farm Seeds",
         "tooltip_heavy_armor": "Heavy Armor",
         "tooltip_light_armor": "Light Armor",
         "tooltip_light_source": "Light Sources",
         "tooltip_log": "Wood Log",
         "tooltip_meat_stew": "Meat Stew & Tagine",
         "tooltip_melee_weapon": "Melee Weapons",
-        "tooltip_pelt": "Fur Pelt",
+        "tooltip_pelt": "Pelts",
         "tooltip_quest_items": "Quest Items",
         "tooltip_ranged_weapon": "Ranged Weapons",
         "tooltip_rotten_food": "Rotten Food",
-        "tooltip_seeds": "Seeds",
         "tooltip_table": "Tables",
-        "tooltip_tree": "Tree Sapling",
+        "tooltip_uproot": "Uprooted Plants & Saplings",
+        "tooltip_seed": "Seeds",
         "tooltip_veggie_stew": "Veggie Stew & Tagine",
         "tooltip_window": "Windows",
         "tooltip_worker_outfit": "Worker Outfits"
