--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -21,6 +21,7 @@
         "tooltip_gate": "Portails",
         "tooltip_gizmo": "Pièges & Tourelles",
         "tooltip_healing_item": "Bandages & Potions de soin",
+        "tooltip_farm_seed": "Graines de cultures",
         "tooltip_heavy_armor": "Armures lourdes",
         "tooltip_light_armor": "Armures légères",
         "tooltip_light_source": "Sources de lumière",
@@ -31,9 +32,9 @@
         "tooltip_quest_items": "Objets de quête",
         "tooltip_ranged_weapon": "Armes à distance",
         "tooltip_rotten_food": "Nourriture pourrie",
-        "tooltip_seeds": "Graines",
         "tooltip_table": "Tables",
-        "tooltip_tree": "Pousses d'arbres",
+        "tooltip_uproot": "Plantes déracinées & Pousses d'arbres",
+        "tooltip_seed": "Graines",
         "tooltip_veggie_stew": "Soupe & Tajine de légumes",
         "tooltip_window": "Fenêtres",
         "tooltip_worker_outfit": "Tenues de travail"
