Fixed French locales

--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -17,26 +17,27 @@
         "tooltip_crate": "Containers de stockage",
         "tooltip_decorative": "Meubles décoratifs",
         "tooltip_door": "Portes",
+        "tooltip_farm_seed": "Graines de cultures",
         "tooltip_fence": "Barrières",
         "tooltip_gate": "Portails",
         "tooltip_gizmo": "Pièges & Tourelles",
         "tooltip_healing_item": "Bandages & Potions de soin",
-        "tooltip_farm_seed": "Graines de cultures",
         "tooltip_heavy_armor": "Armures lourdes",
         "tooltip_light_armor": "Armures légères",
-        "tooltip_light_source": "Sources de lumière",
         "tooltip_log": "Rondins de bois",
         "tooltip_meat_stew": "Ragoût et Tajine de viande",
         "tooltip_melee_weapon": "Armes de mêlée",
-        "tooltip_pelt": "Fourrures",
+        "tooltip_pelt": "Peaux",
         "tooltip_quest_items": "Objets de quête",
         "tooltip_ranged_weapon": "Armes à distance",
         "tooltip_rotten_food": "Nourriture pourrie",
-        "tooltip_table": "Tables",
-        "tooltip_uproot": "Plantes déracinées & Pousses d'arbres",
         "tooltip_seed": "Graines",
+        "tooltip_table": "Tables",
+        "tooltip_tool": "Outils",
+        "tooltip_uproot": "Plantes déracinées & Pousses d'arbres",
         "tooltip_veggie_stew": "Soupe & Tajine de légumes",
         "tooltip_window": "Fenêtres",
+        "tooltip_workbench": "Établis",
         "tooltip_worker_outfit": "Tenues de travail"
     }
 }
