--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -3,8 +3,9 @@
         "animal_feed": "Pâtures",
         "consumables": "Consommables",
         "cooking_ingredients": "Ingrédients",
-        "equipment": "Équipement",
+        "equipment": "Équipements",
         "garbage": "Déchets",
+        "goods": "Produits rafinés",
         "pile": "Piles d'objets",
         "prepared_meat": "Plats Viande",
         "prepared_veggie": "Plats Végé.",
@@ -20,16 +21,23 @@
         "tooltip_farm_seed": "Graines de cultures",
         "tooltip_fence": "Barrières",
         "tooltip_gate": "Portails",
+        "tooltip_gear": "Engrenages",
         "tooltip_gizmo": "Pièges & Tourelles",
         "tooltip_healing_item": "Bandages & Potions de soin",
         "tooltip_heavy_armor": "Armures lourdes",
+        "tooltip_herb": "Herbes",
+        "tooltip_ingot": "Lingots",
         "tooltip_light_armor": "Armures légères",
         "tooltip_log": "Rondins de bois",
         "tooltip_meat_stew": "Ragoût et Tajine de viande",
         "tooltip_melee_weapon": "Armes de mêlée",
         "tooltip_pelt": "Peaux",
+        "tooltip_prepared_meat": "Plats Viande",
+        "tooltip_prepared_vegetarian": "Plats Végé.",
         "tooltip_quest_items": "Objets de quête",
         "tooltip_ranged_weapon": "Armes à distance",
+        "tooltip_raw_meat": "Viande crue",
+        "tooltip_raw_vegetarian": "Végé. crus",
         "tooltip_rotten_food": "Nourriture pourrie",
         "tooltip_seed": "Graines",
         "tooltip_table": "Tables",
