--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -5,7 +5,8 @@
         "cooking_ingredients": "Ingredients",
         "equipment": "Equipment",
         "garbage": "Garbage",
-        "pile": "Items Piles",
+        "goods": "Refined Goods",
+        "pile": "Item Piles",
         "prepared_meat": "Cooked Meat",
         "prepared_veggie": "Cooked Veggie",
         "raw_meat": "Raw Meat",
@@ -20,16 +21,23 @@
         "tooltip_farm_seed": "Farm Seeds",
         "tooltip_fence": "Fences",
         "tooltip_gate": "Gates",
+        "tooltip_gear": "Gears",
         "tooltip_gizmo": "Traps & Turrets",
         "tooltip_healing_item": "Bandages & Healing Tonic",
         "tooltip_heavy_armor": "Heavy Armor",
+        "tooltip_herb": "Herbs",
+        "tooltip_ingot": "Ingots",
         "tooltip_light_armor": "Light Armor",
         "tooltip_log": "Wood Log",
         "tooltip_meat_stew": "Meat Stew & Tagine",
         "tooltip_melee_weapon": "Melee Weapons",
         "tooltip_pelt": "Pelts",
+        "tooltip_prepared_meat": "Cooked Meat Foods",
+        "tooltip_prepared_vegetarian": "Cooked Vegetarian Foods",
         "tooltip_quest_items": "Quest Items",
         "tooltip_ranged_weapon": "Ranged Weapons",
+        "tooltip_raw_meat": "Raw Meat Foods",
+        "tooltip_raw_vegetarian": "Raw Vegetarian Foods",
         "tooltip_rotten_food": "Rotten Food",
         "tooltip_seed": "Seeds",
         "tooltip_table": "Tables",
