--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -26,6 +26,7 @@
         "tooltip_healing_item": "Bandages & Healing Tonic",
         "tooltip_heavy_armor": "Heavy Armor",
         "tooltip_herb": "Herbs",
+        "tooltip_fiber": "Fibers",
         "tooltip_ingot": "Ingots",
         "tooltip_light_armor": "Light Armor",
         "tooltip_log": "Wood Log",
