--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -26,6 +26,7 @@
         "tooltip_healing_item": "Bandages & Potions de soin",
         "tooltip_heavy_armor": "Armures lourdes",
         "tooltip_herb": "Herbes",
+        "tooltip_fiber": "Fibres",
         "tooltip_ingot": "Lingots",
         "tooltip_light_armor": "Armures légères",
         "tooltip_log": "Rondins de bois",
