--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -1,52 +1,45 @@
 {
     "filters": {
-        "animal_feed": "Pâtures",
+        "bones": "Ossements",
+        "saplings": "Pousses d'arbres",
+        "uproots": "Plantes déracinées",
+        "portal": "Pièces de construction",
+        "wood_portal": "Pièces de construction en bois",
+        "stone_portal": "Pièces de construction en pierre",
+        "clay_portal": "Pièces de construction en argile",
+        "metal_portal": "Pièces de construction en métal",
+        "wood_defense": "Défenses en bois",
+        "stone_defense": "Défenses en pierre",
+        "clay_defense": "Défenses en argile",
+        "metal_defense": "Défenses en métal",
+        "trap": "Pièges et tourelles",
+        "wood_furniture": "Meubles en bois",
+        "stone_furniture": "Meubles en pierre",
+        "clay_furniture": "Meubles en argile",
+        "metal_furniture": "Meubles en métal",
+        "fiber_furniture": "Meubles en fibres",
+        "workbench": "Ateliers",
+        "wood_decoration": "Décorations en bois",
+        "stone_decoration": "Décorations en pierre",
+        "clay_decoration": "Décorations en argile",
+        "metal_decoration": "Décorations en métal",
+        "cloth_decoration": "Décorations en fibres",
+        "plant_decoration": "Décorations en plantes",
+        "equipment": "Equipement",
+        "tool": "Outils",
+        "melee_weapon": "Armes de mêlée",
+        "ranged_weapon": "Armes à distance et munitions",
+        "light_armor": "Armures légères",
+        "heavy_armor": "Armures lourdes",
+        "worker_outfit": "Tenues de travail"
         "consumables": "Consommables",
+        "farm_seed": "Graines de cultures",
+        "geomancer": "Géomancien",
+        "golems": "Golems",
         "cooking_ingredients": "Ingrédients",
-        "equipment": "Équipements",
-        "garbage": "Déchets",
-        "goods": "Produits rafinés",
-        "pile": "Piles d'objets",
-        "prepared_meat": "Plats Viande",
-        "prepared_veggie": "Plats Végé.",
-        "raw_meat": "Viande crue",
-        "raw_veggie": "Végé. crus",
-        "tooltip_bed": "Lits",
-        "tooltip_bread": "Pain",
-        "tooltip_chair": "Chaises",
-        "tooltip_containers": "Containers d'approvisionnement",
-        "tooltip_crate": "Containers de stockage",
-        "tooltip_decorative": "Meubles décoratifs",
-        "tooltip_door": "Portes",
-        "tooltip_farm_seed": "Graines de cultures",
-        "tooltip_fence": "Barrières",
-        "tooltip_gate": "Portails",
-        "tooltip_gear": "Engrenages",
-        "tooltip_gizmo": "Pièges & Tourelles",
-        "tooltip_healing_item": "Bandages & Potions de soin",
-        "tooltip_heavy_armor": "Armures lourdes",
-        "tooltip_herb": "Herbes",
-        "tooltip_fiber": "Fibres",
-        "tooltip_ingot": "Lingots",
-        "tooltip_light_armor": "Armures légères",
-        "tooltip_log": "Rondins de bois",
-        "tooltip_meat_stew": "Ragoût et Tajine de viande",
-        "tooltip_melee_weapon": "Armes de mêlée",
-        "tooltip_pelt": "Peaux",
-        "tooltip_prepared_meat": "Plats Viande",
-        "tooltip_prepared_vegetarian": "Plats Végé.",
-        "tooltip_quest_items": "Objets de quête",
-        "tooltip_ranged_weapon": "Armes à distance",
-        "tooltip_raw_meat": "Viande crue",
-        "tooltip_raw_vegetarian": "Végé. crus",
-        "tooltip_rotten_food": "Nourriture pourrie",
-        "tooltip_seed": "Graines",
-        "tooltip_table": "Tables",
-        "tooltip_tool": "Outils",
-        "tooltip_uproot": "Plantes déracinées & Pousses d'arbres",
-        "tooltip_veggie_stew": "Soupe & Tajine de légumes",
-        "tooltip_window": "Fenêtres",
-        "tooltip_workbench": "Établis",
-        "tooltip_worker_outfit": "Tenues de travail"
+        "animal_feed": "Pâtures",
+        "misc": "Divers",
+        "rotten_food": "Nourriture avariée",
+        "fertilized_egg": "Oeufs fertilisés"
     }
 }
