--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -1,52 +1,45 @@
 {
     "filters": {
-        "animal_feed": "Animal Feed",
-        "consumables": "Consumables",
-        "cooking_ingredients": "Ingredients",
+        "bones": "Bones",
+        "saplings": "Saplings",
+        "uproots": "Uprooted Plants",
+        "portal": "Building Parts",
+        "wood_portal": "Wooden Building Parts",
+        "stone_portal": "Stone Building Parts",
+        "clay_portal": "Clay Building Parts",
+        "metal_portal": "Metal Building Parts",
+        "wood_defense": "Wooden Defenses",
+        "stone_defense": "Stone Defenses",
+        "clay_defense": "Clay Defenses",
+        "metal_defense": "Metal Defenses",
+        "trap": "Traps & Turrets",
+        "wood_furniture": "Wooden Furniture",
+        "stone_furniture": "Stone Furniture",
+        "clay_furniture": "Clay Furniture",
+        "metal_furniture": "Metal Furniture",
+        "fiber_furniture": "Woven Furniture",
+        "workbench": "Workbenches",
+        "wood_decoration": "Wooden Decorations",
+        "stone_decoration": "Stone Decorations",
+        "clay_decoration": "Clay Decorations",
+        "metal_decoration": "Metal Decorations",
+        "cloth_decoration": "Woven Decorations",
+        "plant_decoration": "Plant Decorations",
         "equipment": "Equipment",
-        "garbage": "Garbage",
-        "goods": "Refined Goods",
-        "pile": "Item Piles",
-        "prepared_meat": "Cooked Meat",
-        "prepared_veggie": "Cooked Veggie",
-        "raw_meat": "Raw Meat",
-        "raw_veggie": "Raw Veggie",
-        "tooltip_bed": "Beds",
-        "tooltip_bread": "Bread",
-        "tooltip_chair": "Chairs",
-        "tooltip_containers": "Supply & Finished Work Containers",
-        "tooltip_crate": "Storage Containers",
-        "tooltip_decorative": "Decorative Furniture",
-        "tooltip_door": "Doors",
-        "tooltip_farm_seed": "Farm Seeds",
-        "tooltip_fence": "Fences",
-        "tooltip_gate": "Gates",
-        "tooltip_gear": "Gears",
-        "tooltip_gizmo": "Traps & Turrets",
-        "tooltip_healing_item": "Bandages & Healing Tonic",
-        "tooltip_heavy_armor": "Heavy Armor",
-        "tooltip_herb": "Herbs",
-        "tooltip_fiber": "Fibers",
-        "tooltip_ingot": "Ingots",
-        "tooltip_light_armor": "Light Armor",
-        "tooltip_log": "Wood Log",
-        "tooltip_meat_stew": "Meat Stew & Tagine",
-        "tooltip_melee_weapon": "Melee Weapons",
-        "tooltip_pelt": "Pelts",
-        "tooltip_prepared_meat": "Cooked Meat Foods",
-        "tooltip_prepared_vegetarian": "Cooked Vegetarian Foods",
-        "tooltip_quest_items": "Quest Items",
-        "tooltip_ranged_weapon": "Ranged Weapons",
-        "tooltip_raw_meat": "Raw Meat Foods",
-        "tooltip_raw_vegetarian": "Raw Vegetarian Foods",
-        "tooltip_rotten_food": "Rotten Food",
-        "tooltip_seed": "Seeds",
-        "tooltip_table": "Tables",
-        "tooltip_tool": "Tools",
-        "tooltip_uproot": "Uprooted Plants & Saplings",
-        "tooltip_veggie_stew": "Veggie Stew & Tagine",
-        "tooltip_window": "Windows",
-        "tooltip_workbench": "Workbenches",
-        "tooltip_worker_outfit": "Worker Outfits"
+        "tool": "Tools",
+        "melee_weapon": "Melee Weapons",
+        "ranged_weapon": "Ranged Weapons & Ammunitions",
+        "light_armor": "Light Armor",
+        "heavy_armor": "Heavy Armor",
+        "worker_outfit": "Worker Outfits"
+        "consumables": "Consumables",
+        "farm_seed": "Farm Seeds",
+        "geomancer": "Geomancer",
+        "golems": "Golems",
+        "cooking_ingredients": "Ingredients",
+        "animal_feed": "Animal Feed",
+        "misc": "Misc.",
+        "rotten_food": "Rotten Food",
+        "fertilized_egg": "Fertilized Eggs"
     }
 }
