--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -33,6 +33,7 @@
         "heavy_armor": "Armures lourdes",
         "worker_outfit": "Tenues de travail"
         "consumables": "Consommables",
+        "healing_item": "Bandages et potions de soin",
         "farm_seed": "Graines de cultures",
         "geomancer": "Géomancien",
         "golems": "Golems",
