Missing comma in fr-FR.json

--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -31,7 +31,7 @@
         "ranged_weapon": "Armes à distance et munitions",
         "light_armor": "Armures légères",
         "heavy_armor": "Armures lourdes",
-        "worker_outfit": "Tenues de travail"
+        "worker_outfit": "Tenues de travail",
         "consumables": "Consommables",
         "healing_item": "Bandages et potions de soin",
         "farm_seed": "Graines de cultures",
