--- a/betterstorage/locales/en.json
+++ b/betterstorage/locales/en.json
@@ -1,46 +1,48 @@
 {
     "filters": {
+        "animal_feed": "Animal Feed",
         "bones": "Bones",
-        "saplings": "Saplings",
-        "uproots": "Uprooted Plants",
-        "portal": "Building Parts",
-        "wood_portal": "Wooden Building Parts",
-        "stone_portal": "Stone Building Parts",
-        "clay_portal": "Clay Building Parts",
-        "metal_portal": "Metal Building Parts",
-        "wood_defense": "Wooden Defenses",
-        "stone_defense": "Stone Defenses",
-        "clay_defense": "Clay Defenses",
-        "metal_defense": "Metal Defenses",
-        "trap": "Traps & Turrets",
-        "wood_furniture": "Wooden Furniture",
-        "stone_furniture": "Stone Furniture",
-        "clay_furniture": "Clay Furniture",
-        "metal_furniture": "Metal Furniture",
-        "fiber_furniture": "Woven Furniture",
-        "workbench": "Workbenches",
-        "wood_decoration": "Wooden Decorations",
-        "stone_decoration": "Stone Decorations",
         "clay_decoration": "Clay Decorations",
-        "metal_decoration": "Metal Decorations",
+        "clay_defense": "Clay Defenses",
+        "clay_furniture": "Clay Furniture",
+        "clay_portal": "Clay Building Parts",
         "cloth_decoration": "Woven Decorations",
-        "plant_decoration": "Plant Decorations",
-        "equipment": "Equipment",
-        "tool": "Tools",
-        "melee_weapon": "Melee Weapons",
-        "ranged_weapon": "Ranged Weapons & Ammunitions",
-        "light_armor": "Light Armor",
-        "heavy_armor": "Heavy Armor",
-        "worker_outfit": "Worker Outfits",
         "consumables": "Consumables",
-        "healing_item": "Bandages & Healing Tonic",
+        "cooking_ingredients": "Ingredients",
+        "equipment": "Equipment",
         "farm_seed": "Farm Seeds",
+        "fertilized_egg": "Fertilized Eggs",
+        "fiber_furniture": "Woven Furniture",
         "geomancer": "Geomancer",
         "golems": "Golems",
-        "cooking_ingredients": "Ingredients",
-        "animal_feed": "Animal Feed",
+        "healing_item": "Bandages",
+        "healing_tonic": "Healing Tonic",
+        "heavy_armor": "Heavy Armor",
+        "legendary": "Legendary Materials",
+        "light_armor": "Light Armor",
+        "melee_weapon": "Melee Weapons",
+        "metal_decoration": "Metal Decorations",
+        "metal_defense": "Metal Defenses",
+        "metal_furniture": "Metal Furniture",
+        "metal_portal": "Metal Building Parts",
         "misc": "Misc.",
+        "plant_decoration": "Plant Decorations",
+        "portal": "Building Parts",
+        "ranged_weapon": "Ranged Weapons & Ammunitions",
         "rotten_food": "Rotten Food",
-        "fertilized_egg": "Fertilized Eggs"
+        "saplings": "Saplings",
+        "stone_decoration": "Stone Decorations",
+        "stone_defense": "Stone Defenses",
+        "stone_furniture": "Stone Furniture",
+        "stone_portal": "Stone Building Parts",
+        "tool": "Tools",
+        "trap": "Traps & Turrets",
+        "uproots": "Uprooted Plants",
+        "wood_decoration": "Wooden Decorations",
+        "wood_defense": "Wooden Defenses",
+        "wood_furniture": "Wooden Furniture",
+        "wood_portal": "Wooden Building Parts",
+        "workbench": "Workbenches",
+        "worker_outfit": "Worker Outfits"
     }
 }
