--- a/betterstorage/locales/fr-FR.json
+++ b/betterstorage/locales/fr-FR.json
@@ -1,46 +1,48 @@
 {
     "filters": {
+        "animal_feed": "Pâtures",
         "bones": "Ossements",
-        "saplings": "Pousses d'arbres",
-        "uproots": "Plantes déracinées",
-        "portal": "Pièces de construction",
-        "wood_portal": "Pièces de construction en bois",
-        "stone_portal": "Pièces de construction en pierre",
-        "clay_portal": "Pièces de construction en argile",
-        "metal_portal": "Pièces de construction en métal",
-        "wood_defense": "Défenses en bois",
-        "stone_defense": "Défenses en pierre",
-        "clay_defense": "Défenses en argile",
-        "metal_defense": "Défenses en métal",
-        "trap": "Pièges et tourelles",
-        "wood_furniture": "Meubles en bois",
-        "stone_furniture": "Meubles en pierre",
-        "clay_furniture": "Meubles en argile",
-        "metal_furniture": "Meubles en métal",
-        "fiber_furniture": "Meubles en fibres",
-        "workbench": "Ateliers",
-        "wood_decoration": "Décorations en bois",
-        "stone_decoration": "Décorations en pierre",
         "clay_decoration": "Décorations en argile",
-        "metal_decoration": "Décorations en métal",
+        "clay_defense": "Défenses en argile",
+        "clay_furniture": "Meubles en argile",
+        "clay_portal": "Pièces de construction en argile",
         "cloth_decoration": "Décorations en fibres",
-        "plant_decoration": "Décorations en plantes",
-        "equipment": "Equipement",
-        "tool": "Outils",
-        "melee_weapon": "Armes de mêlée",
-        "ranged_weapon": "Armes à distance et munitions",
-        "light_armor": "Armures légères",
-        "heavy_armor": "Armures lourdes",
-        "worker_outfit": "Tenues de travail",
         "consumables": "Consommables",
-        "healing_item": "Bandages et potions de soin",
+        "cooking_ingredients": "Ingrédients",
+        "equipment": "Equipement",
         "farm_seed": "Graines de cultures",
+        "fertilized_egg": "Oeufs fertilisés",
+        "fiber_furniture": "Meubles en fibres",
         "geomancer": "Géomancien",
         "golems": "Golems",
-        "cooking_ingredients": "Ingrédients",
-        "animal_feed": "Pâtures",
+        "healing_item": "Bandages",
+        "healing_tonic": "Potions de soin",
+        "heavy_armor": "Armures lourdes",
+        "legendary": "Matériaux légendaires",
+        "light_armor": "Armures légères",
+        "melee_weapon": "Armes de mêlée",
+        "metal_decoration": "Décorations en métal",
+        "metal_defense": "Défenses en métal",
+        "metal_furniture": "Meubles en métal",
+        "metal_portal": "Pièces de construction en métal",
         "misc": "Divers",
+        "plant_decoration": "Décorations en plantes",
+        "portal": "Pièces de construction",
+        "ranged_weapon": "Armes à distance et munitions",
         "rotten_food": "Nourriture avariée",
-        "fertilized_egg": "Oeufs fertilisés"
+        "saplings": "Pousses d'arbres",
+        "stone_decoration": "Décorations en pierre",
+        "stone_defense": "Défenses en pierre",
+        "stone_furniture": "Meubles en pierre",
+        "stone_portal": "Pièces de construction en pierre",
+        "tool": "Outils",
+        "trap": "Pièges et tourelles",
+        "uproots": "Plantes déracinées",
+        "wood_decoration": "Décorations en bois",
+        "wood_defense": "Défenses en bois",
+        "wood_furniture": "Meubles en bois",
+        "wood_portal": "Pièces de construction en bois",
+        "workbench": "Ateliers",
+        "worker_outfit": "Tenues de travail",
     }
 }
